# nawi

./: .dir-locals.el  .envrc  .gitignore  README.org  flake.nix  fourmolu.yaml  hie.yaml  nawi.cabal
.builds/: mirror.yml
.github/workflows/: devenv.yml
nawi/: Main.hs  Options.hs  ui.blp
