cabal-version:       2.4
name:                nawi
version:             0.0.0.1
synopsis:            Nats widgets
-- description:
-- bug-reports:
license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Jakub Kopański
maintainer:          jakub@famisoft.pl
copyright:           (c) Jakub Kopański Famisoft.
category:            Desktop, GUI
-- extra-source-files:  CHANGELOG.md

tested-with:
  GHC == 9.8.2

common common-extensions
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    InstanceSigs
    ImplicitParams
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeOperators
    TypeFamilies
    TypeSynonymInstances

common common-ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Werror
    -Wpartial-fields
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -fhide-source-paths
    -fwrite-ide-info
    -hiedir=.hie
    -haddock
    -j

common common-rts-options
  ghc-options:
    -rtsopts
    -threaded
    -with-rtsopts=-N

common common-dependencies
  build-depends:
    , base >= 4.15 && < 5
    , aeson ^>= 2.2
    , autodocodec ^>= 0.2
    , chronos ^>= 1.1
    , clay
    , co-log-core ^>= 0.3
    , Color
    , dhall ^>= 1.42
    , exceptions ^>= 0.10
    , gi-adwaita ^>= 1.0
    , gi-gio
    , gi-glib ^>= 2.0
    , gi-gtk ^>= 4.0
    , haskell-gi-base ^>= 0.26
    , path ^>= 0.9
    , path-io ^>= 1.8
    , relude ^>= 1.2
    , rhine ^>= 1.4
    , text ^>= 2
    , transformers
    , uuid ^>= 1.3
    , X11 ^>= 1.10
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
    
library
  import: common-extensions
  import: common-ghc-options
  import: common-dependencies
  hs-source-dirs: src
  exposed-modules:
    Widget

executable nawi
  import: common-extensions
  import: common-ghc-options
  import: common-rts-options
  import: common-dependencies
  main-is: Main.hs
  other-modules:
    Options

  hs-source-dirs:
    nawi
    src
  build-depends:
    , nawi
    , optparse-applicative ^>= 0.17
    , optparse-generic ^>= 1.4

